--- a/DoAnTotNghiep/src/main/resources/templates/giangvien/ThongKe.html
+++ b/DoAnTotNghiep/src/main/resources/templates/giangvien/ThongKe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
     <meta charset="utf-8">
@@ -10,19 +11,6 @@
     <link rel="shortcut icon" href="img/favicon.png">
 
     <title>Thống kê</title>
-
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- bootstrap theme -->
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <!--external css-->
-    <!-- font icon -->
-    <link href="css/elegant-icons-style.css" rel="stylesheet" />
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
-    <!-- Custom styles -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/style-responsive.css" rel="stylesheet" />
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -40,105 +28,18 @@
 
 <body>
     <!-- container section start -->
-    <section id="container" class="">
-        <!--header start-->
+   <!-- container section start -->
+  
+ 	<th:block th:include="/head"></th:block>
+  <!-- container section start -->
+  <section id="container" class="">
+    <!-- header -->
+    	<th:block th:include="/header"></th:block>
+    <!--header end-->
 
-        <header class="header dark-bg">
-            <div class="toggle-nav">
-                <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i
-                        class="icon_menu"></i></div>
-            </div>
-
-            <!--logo start-->
-            <a href="index-GiangVien.html" class="logo">Giảng <span class="lite">Viên</span></a>
-            <!--logo end-->
-
-          
-
-            <div class="top-nav notification-row">
-                <!-- notificatoin dropdown start-->
-                <ul class="nav pull-right top-menu">
-
-         
-                    <!-- alert notification end-->
-                    <!-- user login dropdown start-->
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="profile-ava">
-                                <img alt="" src="img/profile-avatar-duc.jpg">
-                            </span>
-                            <span class="username">Tran Khanh Duc</span>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu extended logout">
-                            <div class="log-arrow-up"></div>
-                            <li class="eborder-top">
-                                <a href="information.html"><i class="icon_profile"></i> My Profile</a>
-                            </li>
-                            <li>
-                                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- user login dropdown end -->
-                </ul>
-                <!-- notificatoin dropdown end-->
-            </div>
-        </header>
-        <!--header end-->
-
-        <!--sidebar start-->
-        <aside>
-            <div id="sidebar" class="nav-collapse ">
-              <!-- sidebar menu start-->
-              <ul class="sidebar-menu">
-                <li class="active">
-                  <a class="" href="index-GiangVien.html">
-                    <i class="icon_house_alt"></i>
-                    <span>Trang chủ</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="ThongTin.html">
-                    <i class="icon_info"></i>
-                    <span>Thông tin</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="DanhSachSinhVien.html">
-                    <i class="icon_group"></i>
-                    <span>Danh sách sinh viên</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="DanhSachBaiTap.html">
-                    <i class="icon_folder-open_alt"></i>
-                    <span>Danh sách bài tập</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="NhiemVu.html">
-                    <i class="icon_tags_alt"></i>
-                    <span>Giao nhiệm vụ</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="ThongKe.html">
-                    <i class="icon_datareport"></i>
-                    <span>Thống Kê</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="TroChuyen.html">
-                    <i class="icon_chat_alt"></i>
-                    <span>Tạo cuộc trò chuyện</span>
-                  </a>
-                </li>
-              </ul>
-              <!-- sidebar menu end-->
-            </div>
-          </aside>
-        <!--sidebar end-->
+    <!--sidebar start-->
+     	<th:block th:include="/sidebar"></th:block>
+    <!--sidebar end-->
 
         <!--main content start-->
         <section id="main-content">
