--- a/DoAnTotNghiep/src/main/resources/templates/giangvien/TroChuyen.html
+++ b/DoAnTotNghiep/src/main/resources/templates/giangvien/TroChuyen.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
     <meta charset="utf-8">
@@ -10,31 +11,6 @@
     <link rel="shortcut icon" href="img/favicon.png">
 
     <title>Trò chuyện</title>
-
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- bootstrap theme -->
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <!--external css-->
-    <!-- font icon -->
-    <link href="css/elegant-icons-style.css" rel="stylesheet" />
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
-    <!-- full calendar css-->
-    <link href="assets/fullcalendar/fullcalendar/bootstrap-fullcalendar.css" rel="stylesheet" />
-    <link href="assets/fullcalendar/fullcalendar/fullcalendar.css" rel="stylesheet" />
-    <!-- easy pie chart-->
-    <link href="assets/jquery-easy-pie-chart/jquery.easy-pie-chart.css" rel="stylesheet" type="text/css"
-        media="screen" />
-    <!-- owl carousel -->
-    <link rel="stylesheet" href="css/owl.carousel.css" type="text/css">
-    <link href="css/jquery-jvectormap-1.2.2.css" rel="stylesheet">
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="css/fullcalendar.css">
-    <link href="css/widgets.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/style-responsive.css" rel="stylesheet" />
-    <link href="css/xcharts.min.css" rel=" stylesheet">
-    <link href="css/jquery-ui-1.10.4.min.css" rel="stylesheet">
     <!-- =======================================================
     Theme Name: NiceAdmin
     Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
@@ -45,101 +21,17 @@
 
 <body>
     <!-- container section start -->
-    <section id="container" class="">
+  
+ 	<th:block th:include="/head"></th:block>
+  <!-- container section start -->
+  <section id="container" class="">
+    <!-- header -->
+    	<th:block th:include="/header"></th:block>
+    <!--header end-->
 
-        <header class="header dark-bg">
-            <div class="toggle-nav">
-                <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i
-                        class="icon_menu"></i></div>
-            </div>
-
-            <!--logo start-->
-            <a href="index.html" class="logo">Giảng <span class="lite">Viên</span></a>
-            <!--logo end-->
-
-
-            <div class="top-nav notification-row">
-                <!-- notificatoin dropdown start-->
-                <ul class="nav pull-right top-menu">
-
-                    <!-- user login dropdown start-->
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="profile-ava">
-                                <img alt="" src="img/profile-avatar-duc.jpg">
-                            </span>
-                            <span class="username">Tran Khanh Duc</span>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu extended logout">
-                            <div class="log-arrow-up"></div>
-                            <li class="eborder-top">
-                                <a href="information.html"><i class="icon_profile"></i> My Profile</a>
-                            </li>
-                            <li>
-                                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- user login dropdown end -->
-                </ul>
-                <!-- notificatoin dropdown end-->
-            </div>
-        </header>
-        <!--header end-->
-
-        <!--sidebar start-->
-        <aside>
-            <div id="sidebar" class="nav-collapse ">
-              <!-- sidebar menu start-->
-              <ul class="sidebar-menu">
-                <li class="active">
-                  <a class="" href="index-GiangVien.html">
-                    <i class="icon_house_alt"></i>
-                    <span>Trang chủ</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="ThongTin.html">
-                    <i class="icon_info"></i>
-                    <span>Thông tin</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="DanhSachSinhVien.html">
-                    <i class="icon_group"></i>
-                    <span>Danh sách sinh viên</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="DanhSachBaiTap.html">
-                    <i class="icon_folder-open_alt"></i>
-                    <span>Danh sách bài tập</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="NhiemVu.html">
-                    <i class="icon_tags_alt"></i>
-                    <span>Giao nhiệm vụ</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="ThongKe.html">
-                    <i class="icon_datareport"></i>
-                    <span>Thống Kê</span>
-                  </a>
-                </li>
-                <li class="active">
-                  <a class="" href="TroChuyen.html">
-                    <i class="icon_chat_alt"></i>
-                    <span>Tạo cuộc trò chuyện</span>
-                  </a>
-                </li>
-              </ul>
-              <!-- sidebar menu end-->
-            </div>
-          </aside>
-        <!--sidebar end-->
+    <!--sidebar start-->
+     	<th:block th:include="/sidebar"></th:block>
+    <!--sidebar end-->
 
         <!--main content start-->
         <section id="main-content">
@@ -320,47 +212,6 @@
     <!-- container section start -->
 
     <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/jquery-ui-1.10.4.min.js"></script>
-    <script src="js/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui-1.9.2.custom.min.js"></script>
-    <!-- bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- nice scroll -->
-    <script src="js/jquery.scrollTo.min.js"></script>
-    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-    <!-- charts scripts -->
-    <script src="assets/jquery-knob/js/jquery.knob.js"></script>
-    <script src="js/jquery.sparkline.js" type="text/javascript"></script>
-    <script src="assets/jquery-easy-pie-chart/jquery.easy-pie-chart.js"></script>
-    <script src="js/owl.carousel.js"></script>
-    <!-- jQuery full calendar -->
-    <<script src="js/fullcalendar.min.js">
-    </script>
-    <!-- Full Google Calendar - Calendar -->
-    <script src="assets/fullcalendar/fullcalendar/fullcalendar.js"></script>
-    <!--script for this page only-->
-    <script src="js/calendar-custom.js"></script>
-    <script src="js/jquery.rateit.min.js"></script>
-    <!-- custom select -->
-    <script src="js/jquery.customSelect.min.js"></script>
-    <script src="assets/chart-master/Chart.js"></script>
-
-    <!--custome script for all page-->
-    <script src="js/scripts.js"></script>
-    <!-- custom script for this page-->
-    <script src="js/sparkline-chart.js"></script>
-    <script src="js/easy-pie-chart.js"></script>
-    <script src="js/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="js/jquery-jvectormap-world-mill-en.js"></script>
-    <script src="js/xcharts.min.js"></script>
-    <script src="js/jquery.autosize.min.js"></script>
-    <script src="js/jquery.placeholder.min.js"></script>
-    <script src="js/gdp-data.js"></script>
-    <script src="js/morris.min.js"></script>
-    <script src="js/sparklines.js"></script>
-    <script src="js/charts.js"></script>
-    <script src="js/jquery.slimscroll.min.js"></script>
     <script>
         //knob
         $(function () {
