--- a/DoAnTotNghiep/src/main/resources/templates/giaovu/TaoMoiDoAn.html
+++ b/DoAnTotNghiep/src/main/resources/templates/giaovu/TaoMoiDoAn.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
     <meta charset="utf-8">
@@ -11,17 +12,6 @@
 
     <title>Tạo mới đồ án</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- bootstrap theme -->
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <!--external css-->
-    <!-- font icon -->
-    <link href="css/elegant-icons-style.css" rel="stylesheet" />
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
-    <!-- Custom styles -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/style-responsive.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
@@ -42,109 +32,17 @@
 </head>
 
 <body>
-    <!-- container section start -->
-    <section id="container" class="">
-        <!--header start-->
-        <header class="header dark-bg">
-            <div class="toggle-nav">
-                <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i
-                        class="icon_menu"></i></div>
-            </div>
+    <th:block th:include="/head"></th:block>
+  <!-- container section start -->
+  <section id="container" class="">
+    <!-- header -->
+    	<th:block th:include="/header"></th:block>
+    <!--header end-->
 
-            <!--logo start-->
-            <a href="index.html" class="logo">Quản <span class="lite">lý</span></a>
-            <!--logo end-->
+    <!--sidebar start-->
+     	<th:block th:include="/sidebar"></th:block>
+    <!--sidebar end-->
 
-
-
-            <div class="top-nav notification-row">
-                <!-- notificatoin dropdown start-->
-                <ul class="nav pull-right top-menu">
-
-
-                    <!-- alert notification end-->
-                    <!-- user login dropdown start-->
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="profile-ava">
-                                <img alt="" src="img/lien-avatar.jpg">
-                            </span>
-                            <span class="username">Tran Phuong Lien</span>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu extended logout">
-                            <div class="log-arrow-up"></div>
-                            <li class="eborder-top">
-                                <a href="information.html"><i class="icon_profile"></i> My Profile</a>
-                            </li>
-                            <li>
-                                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- user login dropdown end -->
-                </ul>
-                <!-- notificatoin dropdown end-->
-            </div>
-        </header>
-        <!--header end-->
-
-        <!--sidebar start-->
-        <aside>
-            <div id="sidebar" class="nav-collapse ">
-                <!-- sidebar menu start-->
-                <ul class="sidebar-menu">
-                    <li class="active">
-                        <a class="" href="index.html">
-                            <i class="icon_house_alt"></i>
-                            <span>Trang chủ</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="information.html">
-                            <i class="icon_info"></i>
-                            <span>Thông tin</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="listStudent.html">
-                            <i class="icon_group"></i>
-                            <span>Danh sách sinh viên</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="DanhSachGiangVien.html">
-                            <i class="icon_group"></i>
-                            <span>Danh sách giảng viên</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="DanhSachDoAn.html">
-                            <i class="icon_folder-open_alt"></i>
-                            <span>Danh sách đồ án</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="disscuss.html">
-                            <i class="icon_chat_alt"></i>
-                            <span>Tạo trò chuyện</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="javascript:;" class="">
-                            <i class="icon_plus"></i>
-                            <span>Tạo mới</span>
-                            <span class="menu-arrow arrow_carrot-right"></span>
-                        </a>
-                        <ul class="sub">
-                            <li><a class="" href="TaoMoiGiangVien.html">Thông tin và tài khoản</a></li>
-                            <li><a class="" href="form_validation.html">Đồ Án</a></li>
-                        </ul>
-                    </li>
-
-            </div>
-        </aside>
-        <!--sidebar end-->
 
         <!--main content start-->
         <section id="main-content">
@@ -170,6 +68,17 @@
                                 <div class="form ">
                                     <form class="form-validate form-horizontal" id="feedback_form" method="get"
                                         action="">
+                                        
+                                        <div class="form-group">
+                                            <label class="control-label col-lg-2">Trạng thái</label>
+                                            <div class="col-lg-10">
+                                                <select class="form-control">
+                                                    <option value=""> Đã Hoàn Thành </option>
+                                                    <option value="1">Chưa Hoàn Thành</option>
+
+                                                </select>
+                                            </div>
+                                        </div>
                                         <div class="form-group ">
                                             <label for="cname" class="control-label col-lg-2">Tên đề tài <span
                                                     class="required">*</span></label>
@@ -178,61 +87,12 @@
                                                     type="text" required />
                                             </div>
                                         </div>
+                                       
                                         <div class="form-group ">
-                                            <label for="cname" class="control-label col-lg-2">Sinh viên thực hiện<span
-                                                    class="required">*</span></label>
+                                            <label for="ccomment" class="control-label col-lg-2">Mô tả</label>
                                             <div class="col-lg-10">
-                                                <input class="form-control" id="cname" name="fullname" minlength="5"
-                                                    type="text" required />
-                                            </div>
-                                        </div>
-                                        <div class="form-group ">
-                                            <label for="cname" class="control-label col-lg-2">Giảng viên hướng dẫn<span
-                                                    class="required">*</span></label>
-                                            <div class="col-lg-10">
-                                                <input class="form-control" id="cname" name="fullname" minlength="5"
-                                                    type="text" required />
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="control-label col-lg-2">Ngày sinh , sinh viên</label>
-                                            <div class="col-lg-10">
-                                                <input id="dp1" type="text" value="28-10-2013" size="16"
-                                                    class="form-control">
-                                            </div>
-                                        </div>
-                                        <!-- <div class="form-group ">
-                                            <label for="cemail" class="control-label col-lg-2">Nhóm <span
-                                                    class="required">*</span></label>
-                                            <div class="col-lg-10">
-                                                <select class="form-control m-bot15">
-                                                    <option>Quản lý</option>
-                                                    <option>Giảng Viên</option>
-                                                    <option>Sinh viên</option>
-                                                </select>
-                                            </div>
-                                        </div> -->
-
-                                        <div class="form-group ">
-                                            <label for="cemail" class="control-label col-lg-2">E-Mail Sinh viên <span
-                                                    class="required">*</span></label>
-                                            <div class="col-lg-10">
-                                                <input class="form-control " id="cemail" type="email" name="email"
-                                                    required />
-                                            </div>
-                                        </div>
-                                        <div class="form-group ">
-                                            <label for="Mobile" class="control-label col-lg-2">Số điện thoại <span
-                                                    class="required">*</span></label>
-                                            <div class="col-lg-10">
-                                                <input class=" form-control" id="Mobile" name="Mobile" type="text" />
-                                            </div>
-                                        </div>
-                                        <div class="form-group ">
-                                            <label for="Mobile" class="control-label col-lg-2">MSSV (Nếu có):
-                                                <span></span></label>
-                                            <div class="col-lg-10">
-                                                <input class=" form-control" id="Mobile" name="Mobile" type="text" />
+                                                <textarea class="form-control " id="ccomment" name="comment"
+                                                    required></textarea>
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -241,13 +101,7 @@
                                                 <input type="file" class="form-control" id="upload">
                                             </div>
                                         </div>
-                                        <div class="form-group ">
-                                            <label for="ccomment" class="control-label col-lg-2">Ghi chú</label>
-                                            <div class="col-lg-10">
-                                                <textarea class="form-control " id="ccomment" name="comment"
-                                                    required></textarea>
-                                            </div>
-                                        </div>
+                                       
 
                                         <div class="form-group">
                                             <div class="col-lg-offset-2 col-lg-10">
