--- a/DoAnTotNghiep/src/main/resources/templates/giaovu/TaoMoiSinhVien.html
+++ b/DoAnTotNghiep/src/main/resources/templates/giaovu/TaoMoiSinhVien.html
@@ -25,9 +25,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
       Author: BootstrapMade
       Author URL: https://bootstrapmade.com
     ======================================================= -->
-  <link href="css/daterangepicker.css" rel="stylesheet" />
-  <link href="css/bootstrap-datepicker.css" rel="stylesheet" />
-  <link href="css/bootstrap-colorpicker.css" rel="stylesheet" />
+  
 </head>
 
 <body>
@@ -49,11 +47,11 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
       <section class="wrapper">
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="icon_group"></i>Tạo mới giảng viên</h3>
+            <h3 class="page-header"><i class="icon_group"></i>Tạo mới sinh viên</h3>
             <ol class="breadcrumb">
               <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
               <li><i class="icon_plus"></i>Tạo mới</li>
-              <li><i class="icon_group"></i>giảng viên</li>
+              <li><i class="icon_group"></i>Sinh Viên</li>
             </ol>
           </div>
         </div>
@@ -62,7 +60,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
           <div class="col-lg-12">
             <section class="panel">
               <header class="panel-heading">
-                Thông tin giảng viên
+                Thông tin sinh viên
               </header>
               <div class="panel-body">
                 <div class="form ">
@@ -74,6 +72,45 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                         <input class="form-control" id="cname" name="fullname" minlength="5" type="text" required />
                       </div>
                     </div>
+                    
+                       
+                    <div class="form-group ">
+                      <label for="Mobile" class="control-label col-lg-2">MSSV <span
+                          class="required">*</span></label>
+                      <div class="col-lg-10">
+                        <input class=" form-control" id="Mobile" name="Mobile" type="text" />
+                      </div>
+                    </div>
+                    
+                    <div class="form-group ">
+                      <label for="cemail" class="control-label col-lg-2">GV hướng dẫn <span class="required">*</span></label>
+                      <div class="col-lg-10">
+                        <select class="form-control m-bot15">
+                          <option>Name1</option>
+                          <option>Name2</option>
+                          <option>Name3</option>
+                        </select>
+                      </div>
+                    </div>
+                    
+                    <div class="form-group ">
+                        <label for="cname" class="control-label col-lg-2">Tên đề tài (Nhóm Sinh viên)<span class="required">*</span></label>
+                        <div class="col-lg-10">
+                          <input class="form-control" id="cname" name="fullname" minlength="5" type="text" required="">
+                        </div>
+                      </div>
+                      
+                      <div class="form-group ">
+                      <label for="Mobile" class="control-label col-lg-2">Tài khoản đăng nhập: <span></span></label>
+                      <div class="col-lg-10">
+                        <select class="form-control m-bot15">
+                          <option>Name1</option>
+                          <option>Name2</option>
+                          <option>Name3</option>
+                        </select>
+                      </div>
+                    </div>
+                    
                     <div class="form-group">
                       <label class="control-label col-lg-2">Ngày sinh</label>
                       <div class="col-lg-10">
@@ -89,6 +126,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                         <input class="form-control " id="cemail" type="email" name="email" required />
                       </div>
                     </div>
+                 
                     <div class="form-group ">
                       <label for="Mobile" class="control-label col-lg-2">Số điện thoại <span
                           class="required">*</span></label>
@@ -103,21 +141,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                         <textarea class="form-control " id="ccomment" name="comment" required></textarea>
                       </div>
                     </div>
-                    <!-- <div class="form-group ">
-                        <label for="curl" class="control-label col-lg-2">Website</label>
-                        <div class="col-lg-10">
-                          <input class="form-control " id="curl" type="url" name="url" />
-                        </div>
-                      </div>
-                      <div class="form-group ">
-                        <label for="cname" class="control-label col-lg-2">Subject <span
-                            class="required">*</span></label>
-                        <div class="col-lg-10">
-                          <input class="form-control" id="subject" name="subject" minlength="5" type="text" required />
-                        </div>
-                      </div>
-                      
-                      </div> -->
+                  
                     <div class="form-group">
                       <div class="col-lg-offset-2 col-lg-10">
                         <button class="btn btn-primary" type="submit">Save</button>
@@ -131,50 +155,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
             </section>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <section class="panel">
-              <header class="panel-heading">
-                Tạo tài khoản truy cập
-              </header>
-              <div class="panel-body">
-                <div class="form">
-                  <form class="form-validate form-horizontal " id="register_form" method="get" action="">
-
-
-                    <div class="form-group ">
-                      <label for="username" class="control-label col-lg-2">Username <span
-                          class="required">*</span></label>
-                      <div class="col-lg-10">
-                        <input class="form-control " id="username" name="username" type="text" />
-                      </div>
-                    </div>
-                    <div class="form-group ">
-                      <label for="password" class="control-label col-lg-2">Password <span
-                          class="required">*</span></label>
-                      <div class="col-lg-10">
-                        <input class="form-control " id="password" name="password" type="password" />
-                      </div>
-                    </div>
-                    <div class="form-group ">
-                      <label for="confirm_password" class="control-label col-lg-2">Confirm
-                        Password <span class="required">*</span></label>
-                      <div class="col-lg-10">
-                        <input class="form-control " id="confirm_password" name="confirm_password" type="password" />
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="col-lg-offset-2 col-lg-10">
-                        <button class="btn btn-primary" type="submit">Save</button>
-                        <button class="btn btn-default" type="button">Cancel</button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </section>
-          </div>
-        </div>
+      
         <!-- page end-->
       </section>
     </section>
