--- a/DoAnTotNghiep/src/main/resources/templates/giaovu/TaoTaiKhoan.html
+++ b/DoAnTotNghiep/src/main/resources/templates/giaovu/TaoTaiKhoan.html
@@ -10,7 +10,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
   <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
   <link rel="shortcut icon" href="img/favicon.png">
 
-  <title>Tạo mới giảng viên</title>
+  <title>Tạo mới sinh viên và giảng viên</title>
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
   <!--[if lt IE 9]>
@@ -49,88 +49,16 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
       <section class="wrapper">
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="page-header"><i class="icon_group"></i>Tạo mới giảng viên</h3>
+            <h3 class="page-header"><i class="icon_group"></i>Tạo mới sinh viên , giảng viên</h3>
             <ol class="breadcrumb">
               <li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
               <li><i class="icon_plus"></i>Tạo mới</li>
-              <li><i class="icon_group"></i>giảng viên</li>
+              <li><i class="icon_group"></i>sinh viên ,giảng viên</li>
             </ol>
           </div>
         </div>
         <!-- Form validations -->
-        <div class="row">
-          <div class="col-lg-12">
-            <section class="panel">
-              <header class="panel-heading">
-                Thông tin giảng viên
-              </header>
-              <div class="panel-body">
-                <div class="form ">
-                  <form class="form-validate form-horizontal" id="feedback_form" method="get" action="">
-                    <div class="form-group ">
-                      <label for="cname" class="control-label col-lg-2">Họ và tên <span
-                          class="required">*</span></label>
-                      <div class="col-lg-10">
-                        <input class="form-control" id="cname" name="fullname" minlength="5" type="text" required />
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="control-label col-lg-2">Ngày sinh</label>
-                      <div class="col-lg-10">
-                        <input id="dp1" type="text" value="28-10-2013" size="16" class="form-control">
-                      </div>
-                    </div>
-                    
-                    
-                    
-                    <div class="form-group ">
-                      <label for="cemail" class="control-label col-lg-2">E-Mail <span class="required">*</span></label>
-                      <div class="col-lg-10">
-                        <input class="form-control " id="cemail" type="email" name="email" required />
-                      </div>
-                    </div>
-                    <div class="form-group ">
-                      <label for="Mobile" class="control-label col-lg-2">Số điện thoại <span
-                          class="required">*</span></label>
-                      <div class="col-lg-10">
-                        <input class=" form-control" id="Mobile" name="Mobile" type="text" />
-                      </div>
-                    </div>
-                   
-                    <div class="form-group ">
-                      <label for="ccomment" class="control-label col-lg-2">Ghi chú</label>
-                      <div class="col-lg-10">
-                        <textarea class="form-control " id="ccomment" name="comment" required></textarea>
-                      </div>
-                    </div>
-                    <!-- <div class="form-group ">
-                        <label for="curl" class="control-label col-lg-2">Website</label>
-                        <div class="col-lg-10">
-                          <input class="form-control " id="curl" type="url" name="url" />
-                        </div>
-                      </div>
-                      <div class="form-group ">
-                        <label for="cname" class="control-label col-lg-2">Subject <span
-                            class="required">*</span></label>
-                        <div class="col-lg-10">
-                          <input class="form-control" id="subject" name="subject" minlength="5" type="text" required />
-                        </div>
-                      </div>
-                      
-                      </div> -->
-                    <div class="form-group">
-                      <div class="col-lg-offset-2 col-lg-10">
-                        <button class="btn btn-primary" type="submit">Save</button>
-                        <button class="btn btn-default" type="button">Cancel</button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-
-              </div>
-            </section>
-          </div>
-        </div>
+     
         <div class="row">
           <div class="col-lg-12">
             <section class="panel">
@@ -141,7 +69,22 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
                 <div class="form">
                   <form class="form-validate form-horizontal " id="register_form" method="get" action="">
 
-
+					<div class="form-group ">
+                      <label for="cemail" class="control-label col-lg-2">Nhóm <span class="required">*</span></label>
+                      <div class="col-lg-10">
+                        <select class="form-control m-bot15">
+                          <option>Quản lý</option>
+                          <option>Giảng Viên</option>
+                          <option>Sinh viên</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group ">
+                      <label for="cemail" class="control-label col-lg-2">E-Mail <span class="required">*</span></label>
+                      <div class="col-lg-10">
+                        <input class="form-control " id="cemail" type="email" name="email" required />
+                      </div>
+                    </div>
                     <div class="form-group ">
                       <label for="username" class="control-label col-lg-2">Username <span
                           class="required">*</span></label>
