--- a/DoAnTotNghiep/src/main/resources/templates/giaovu/disscussDetail.html
+++ b/DoAnTotNghiep/src/main/resources/templates/giaovu/disscussDetail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
     <meta charset="utf-8">
@@ -11,18 +12,7 @@
 
     <title>Chi tiết trò chuyện</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- bootstrap theme -->
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <!--external css-->
-    <!-- font icon -->
-    <link href="css/elegant-icons-style.css" rel="stylesheet" />
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
-    <!-- Custom styles -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/style-responsive.css" rel="stylesheet" />
-
+ 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -39,103 +29,17 @@
 </head>
 
 <body>
-    <!-- container section start -->
-    <section id="container" class="">
-        <header class="header dark-bg">
-            <div class="toggle-nav">
-                <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i
-                        class="icon_menu"></i></div>
-            </div>
+    <th:block th:include="/head"></th:block>
+  <!-- container section start -->
+  <section id="container" class="">
+    <!-- header -->
+    	<th:block th:include="/header"></th:block>
+    <!--header end-->
 
-            <!--logo start-->
-            <a href="index.html" class="logo">Quản <span class="lite">lý</span></a>
-            <!--logo end-->
-            <div class="top-nav notification-row">
-                <!-- notificatoin dropdown start-->
-                <ul class="nav pull-right top-menu">
+    <!--sidebar start-->
+     	<th:block th:include="/sidebar"></th:block>
+    <!--sidebar end-->
 
-
-                    <!-- user login dropdown start-->
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="profile-ava">
-                                <img alt="" src="img/lien-avatar.jpg">
-                            </span>
-                            <span class="username">Tran Phuong Liem</span>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu extended logout">
-                            <div class="log-arrow-up"></div>
-                            <li class="eborder-top">
-                                <a href="information.html"><i class="icon_profile"></i> My Profile</a>
-                            </li>
-                            <li>
-                                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- user login dropdown end -->
-                </ul>
-                <!-- notificatoin dropdown end-->
-            </div>
-        </header>
-        <!--header end-->
-
-        <aside>
-            <div id="sidebar" class="nav-collapse ">
-                <!-- sidebar menu start-->
-                <ul class="sidebar-menu">
-                    <li class="active">
-                        <a class="" href="index.html">
-                            <i class="icon_house_alt"></i>
-                            <span>Trang chủ</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="information.html">
-                            <i class="icon_info"></i>
-                            <span>Thông tin</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="listStudent.html">
-                            <i class="icon_group"></i>
-                            <span>Danh sách sinh viên</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="DanhSachGiangVien.html">
-                            <i class="icon_group"></i>
-                            <span>Danh sách giảng viên</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="DanhSachDoAn.html">
-                            <i class="icon_folder-open_alt"></i>
-                            <span>Danh sách đồ án</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="disscuss.html">
-                            <i class="icon_chat_alt"></i>
-                            <span>Tạo trò chuyện</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="javascript:;" class="">
-                            <i class="icon_plus"></i>
-                            <span>Tạo mới</span>
-                            <span class="menu-arrow arrow_carrot-right"></span>
-                        </a>
-                        <ul class="sub">
-                            <li><a class="" href="TaoMoiGiangVien.html">Thông tin và tài khoản</a></li>
-                            <li><a class="" href="TaoMoiDoAn.html">Đồ án</a></li>
-
-                        </ul>
-                    </li>
-
-            </div>
-        </aside>
 
         <!--main content start-->
         <section id="main-content">
