--- a/DoAnTotNghiep/src/main/resources/templates/sinhvien/ThongTin.html
+++ b/DoAnTotNghiep/src/main/resources/templates/sinhvien/ThongTin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
     <meta charset="utf-8">
@@ -11,17 +12,6 @@
 
     <title>Thông tin sinh viên</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- bootstrap theme -->
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <!--external css-->
-    <!-- font icon -->
-    <link href="css/elegant-icons-style.css" rel="stylesheet" />
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
-    <!-- Custom styles -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/style-responsive.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
@@ -39,93 +29,16 @@
 </head>
 
 <body>
-    <!-- container section start -->
-    <section id="container" class="">
-        <!--header start-->
-        <header class="header dark-bg">
-            <div class="toggle-nav">
-                <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i
-                        class="icon_menu"></i></div>
-            </div>
+    <th:block th:include="/head"></th:block>
+  <!-- container section start -->
+  <section id="container" class="">
+    <!-- header -->
+    	<th:block th:include="/header"></th:block>
+    <!--header end-->
 
-            <!--logo start-->
-            <a href="index.html" class="logo">Sinh <span class="lite">Viên</span></a>
-            <!--logo end-->
-
-
-
-            <div class="top-nav notification-row">
-                <!-- notificatoin dropdown start-->
-                <ul class="nav pull-right top-menu">
-
-
-                    <!-- user login dropdown start-->
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="profile-ava">
-                                <img alt="" src="img/profile-avatar-dung-user.jpg">
-                            </span>
-                            <span class="username">Tran Tien Dung</span>
-                            <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu extended logout">
-                            <div class="log-arrow-up"></div>
-                            <li class="eborder-top">
-                                <a href="information.html"><i class="icon_profile"></i> My Profile</a>
-                            </li>
-                            <li>
-                                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- user login dropdown end -->
-                </ul>
-                <!-- notificatoin dropdown end-->
-            </div>
-        </header>
-        <!--header end-->
-
-        <!--sidebar start-->
-        <aside>
-            <div id="sidebar" class="nav-collapse ">
-                <!-- sidebar menu start-->
-                <ul class="sidebar-menu">
-                    <li class="active">
-                        <a class="" href="index-SinhVien.html">
-                            <i class="icon_house_alt"></i>
-                            <span>Trang chủ</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="ThongTin.html">
-                            <i class="icon_info"></i>
-                            <span>Thông tin</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="NhiemVu.html">
-                            <i class="icon_check"></i>
-                            <span>Nhiệm vụ</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="ThongKe.html">
-                            <i class="icon_datareport"></i>
-                            <span>Thống Kê</span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a class="" href="TroChuyen.html">
-                            <i class="icon_chat_alt"></i>
-                            <span>Tạo cuộc trò chuyện</span>
-                        </a>
-                    </li>
-
-                    <!-- sidebar menu end-->
-            </div>
-        </aside>
-
-        <!--sidebar end-->
+    <!--sidebar start-->
+     	<th:block th:include="/sidebar"></th:block>
+    <!--sidebar end-->
 
         <!--main content start-->
         <section id="main-content">
@@ -326,18 +239,7 @@
 
     </section>
 
-    <!-- container section end -->
-    <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- nice scroll -->
-    <script src="js/jquery.scrollTo.min.js"></script>
-    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
-    <!-- jquery knob -->
-    <script src="assets/jquery-knob/js/jquery.knob.js"></script>
-    <!--custome script for all page-->
-    <script src="js/scripts.js"></script>
-
+   
     <script>
         //knob
         $(".knob").knob();
